[gd_scene load_steps=18 format=3 uid="uid://c3m26rb78usw2"]

[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_7sf33"]
[ext_resource type="Texture2D" uid="uid://wvnq82hqa0lg" path="res://graphics/ground/stones.png" id="2_rrv03"]
[ext_resource type="PackedScene" uid="uid://b2hww2tg0fckd" path="res://scenes/objects/gate.tscn" id="3_e0hcg"]
[ext_resource type="Texture2D" uid="uid://bq5ayq18l7pbq" path="res://graphics/decals/dirt_patch.png" id="3_wg2e0"]
[ext_resource type="Texture2D" uid="uid://cd1macwdhhos0" path="res://graphics/decals/moss/moss_1.png" id="4_bec1h"]
[ext_resource type="PackedScene" uid="uid://vwxs2inbjsn1" path="res://scenes/player/player.tscn" id="4_jwqyr"]
[ext_resource type="Texture2D" uid="uid://dyvy6h5nty24n" path="res://graphics/decals/moss/moss_2.png" id="5_0l443"]
[ext_resource type="Texture2D" uid="uid://qtvy7fxaxbhn" path="res://graphics/decals/moss/moss_3.png" id="6_3fybx"]
[ext_resource type="Texture2D" uid="uid://7f7csxg73dmd" path="res://graphics/decals/moss/moss_4.png" id="7_aifdw"]
[ext_resource type="Texture2D" uid="uid://clw4l4bvo2nhr" path="res://graphics/tilesets/outside_walls.png" id="8_o43b4"]
[ext_resource type="Texture2D" uid="uid://c7shvj3xlt2y8" path="res://graphics/tilesets/soil.png" id="9_amw5u"]
[ext_resource type="PackedScene" uid="uid://da8lqphxoidei" path="res://scenes/houses/house.tscn" id="10_tcmsd"]
[ext_resource type="PackedScene" uid="uid://c0lc62wuxchlj" path="res://scenes/objects/steam_vent.tscn" id="11_0nfjc"]
[ext_resource type="PackedScene" uid="uid://dveb08jvglqee" path="res://scenes/objects/light_fan_animation.tscn" id="12_nl2f3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r2raq"]
resource_name = "walls"
texture = ExtResource("8_o43b4")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
0:3/0 = 0
2:0/0 = 0
2:1/0 = 0
2:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1678l"]
resource_name = "soil"
texture = ExtResource("9_amw5u")
texture_region_size = Vector2i(390, 390)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0

[sub_resource type="TileSet" id="TileSet_fx41e"]
tile_size = Vector2i(390, 390)
sources/0 = SubResource("TileSetAtlasSource_r2raq")
sources/1 = SubResource("TileSetAtlasSource_1678l")

[node name="Level" type="Node2D"]
script = ExtResource("1_7sf33")

[node name="Ground" type="Node2D" parent="."]

[node name="Soil" type="Sprite2D" parent="Ground"]
texture_repeat = 2
position = Vector2(577, 544)
texture = ExtResource("2_rrv03")
region_enabled = true
region_rect = Rect2(-5422.7, -3068.13, 16000, 10000)

[node name="Decoration" type="Sprite2D" parent="Ground"]
modulate = Color(0.862745, 1, 0.784314, 1)
position = Vector2(-755, 1226)
texture = ExtResource("3_wg2e0")

[node name="TileMap" type="TileMap" parent="Ground"]
tile_set = SubResource("TileSet_fx41e")
format = 2
layer_0/name = "Soil"
layer_0/tile_data = PackedInt32Array(-3, 65537, 2, -4, 65537, 2, -5, 65537, 2, -6, 65537, 2, -7, 65537, 2, -8, 65537, 2, -9, 1, 2, -65544, 65537, 1, -65543, 65537, 1, -65542, 65537, 1, -65541, 65537, 1, -65540, 65537, 1, -131080, 65537, 1, -131079, 65537, 1, -131078, 65537, 1, -131077, 65537, 1, -131076, 65537, 1, -131075, 65537, 1, -65539, 65537, 1, -65545, 1, 1, -131081, 1, 1, -262138, 1, 1, -196602, 1, 1, -131066, 1, 1, -65530, 1, 2, -65529, 65537, 2, -65528, 65537, 2, -65527, 65537, 2, -65526, 65537, 2, 11, 1, 1, 65547, 1, 1, 131083, 1, 1, 196619, 1, 1, 262155, 1, 1, 327691, 1, 1, 393227, 1, 2, 393228, 65537, 2, 393229, 65537, 2, 393230, 65537, 2, 393231, 65537, 2, 393232, 65537, 2, 393233, 65537, 2, 393234, 65537, 2, 393235, 65537, 2, 393236, 65537, 2, -65525, 65537, 1, 327700, 65537, 1, 262164, 65537, 1, 196628, 65537, 1, 131092, 65537, 1, 65556, 65537, 1, 20, 65537, 1, -65516, 65537, 1, -131052, 65537, 1, -196588, 65537, 1, -262124, 65537, 1, -262125, 65537, 1, -262126, 65537, 1, -262127, 65537, 1, -262128, 65537, 1, -262129, 65537, 1, -262130, 65537, 1, -262131, 65537, 1, -262132, 65537, 1, -262133, 65537, 1, -262134, 65537, 1, -262135, 65537, 1, -262136, 65537, 1, -262137, 65537, 1, -65521, 65537, 1, -131057, 65537, 1, -196593, 65537, 1, -196594, 65537, 1, -196595, 65537, 1, -196596, 65537, 1, -196597, 65537, 1, -196598, 65537, 1, -196599, 65537, 1, -196600, 65537, 1, -196601, 65537, 1, -131065, 65537, 1, -131064, 65537, 1, -131063, 65537, 1, -131062, 65537, 1, -131061, 65537, 1, -131060, 65537, 1, -65524, 65537, 1, 12, 65537, 1, 65548, 65537, 1, 131084, 65537, 1, 196620, 65537, 1, 262156, 65537, 1, 327692, 65537, 1, 327693, 65537, 1, 262157, 65537, 1, 196621, 65537, 1, 131085, 65537, 1, 65549, 65537, 1, 13, 65537, 1, -65523, 65537, 1, -131059, 65537, 1, -131058, 65537, 1, -65522, 65537, 1, 14, 65537, 1, 65550, 65537, 1, 131086, 65537, 1, 196622, 65537, 1, 262158, 65537, 1, 327694, 65537, 1, 327695, 65537, 1, 262159, 65537, 1, 196623, 65537, 1, 131087, 65537, 1, 65551, 65537, 1, 15, 65537, 1, 16, 65537, 1, -65520, 65537, 1, -131056, 65537, 1, -196592, 65537, 1, -196591, 65537, 1, -131055, 65537, 1, -65519, 65537, 1, 17, 65537, 1, 65553, 65537, 1, 65552, 65537, 1, 131088, 65537, 1, 196624, 65537, 1, 262160, 65537, 1, 327696, 65537, 1, 327697, 65537, 1, 262161, 65537, 1, 196625, 65537, 1, 131089, 65537, 1, 131090, 65537, 1, 65554, 65537, 1, 18, 65537, 1, -65518, 65537, 1, -131054, 65537, 1, -196590, 65537, 1, -196589, 65537, 1, -131053, 65537, 1, -65517, 65537, 1, 19, 65537, 1, 65555, 65537, 1, 131091, 65537, 1, 196627, 65537, 1, 196626, 65537, 1, 262162, 65537, 1, 327698, 65537, 1, 327699, 65537, 1, 262163, 65537, 1)
layer_1/name = "Walls"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(-4, 131072, 0, -5, 65536, 0, -7, 65536, 0, -6, 65536, 0, -8, 65536, 0, -9, 0, 0, -65530, 65536, 2, -131066, 0, 2, -65529, 65536, 0, -65528, 65536, 0, -65527, 65536, 0, -65526, 65536, 0, -65525, 131072, 1, 11, 0, 2, 65547, 0, 2, 131083, 0, 2, 196619, 0, 2, 262155, 0, 3, -196602, 0, 2, -262138, 0, 1)

[node name="Moss3" type="Sprite2D" parent="Ground"]
position = Vector2(3544, -40)
texture = ExtResource("6_3fybx")

[node name="Moss4" type="Sprite2D" parent="Ground"]
position = Vector2(2886, -33)
texture = ExtResource("7_aifdw")

[node name="Moss7" type="Sprite2D" parent="Ground"]
position = Vector2(4325, 1481)
rotation = -1.71042
texture = ExtResource("7_aifdw")

[node name="Moss5" type="Sprite2D" parent="Ground"]
position = Vector2(3825, -31)
texture = ExtResource("7_aifdw")

[node name="Moss6" type="Sprite2D" parent="Ground"]
position = Vector2(4297, 630)
rotation = 1.53938
texture = ExtResource("7_aifdw")

[node name="Moss2" type="Sprite2D" parent="Ground"]
position = Vector2(4328, -32)
texture = ExtResource("5_0l443")

[node name="Moss1" type="Sprite2D" parent="Ground"]
position = Vector2(4259, 121)
texture = ExtResource("4_bec1h")

[node name="House" parent="Ground" instance=ExtResource("10_tcmsd")]
position = Vector2(-2263, 3785)
rotation = -2.18166

[node name="SteamVent" parent="Ground" instance=ExtResource("11_0nfjc")]
position = Vector2(-144, 456)

[node name="LightFanAnimation" parent="Ground" instance=ExtResource("12_nl2f3")]
position = Vector2(-2320, 1541)

[node name="Gate" parent="." instance=ExtResource("3_e0hcg")]
position = Vector2(484, -537)
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("4_jwqyr")]
position = Vector2(542, 569)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[node name="Projectiles" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[connection signal="player_entered" from="Ground/House" to="." method="_on_house_player_entered"]
[connection signal="player_exited" from="Ground/House" to="." method="_on_house_player_exited"]
[connection signal="player_entered_gate" from="Gate" to="." method="_on_gate_player_entered_gate"]
[connection signal="grenade" from="Player" to="." method="_on_player_grenade"]
[connection signal="laser" from="Player" to="." method="_on_player_laser"]
